@@ -1,3 +1,7 @@
+* 2013-02-19 - viktor.pracht@open-xchange.com
+
+ - Implemented story 44079663: User can see inbox information in the unified mail overview
+
 * 2013-02-18 - viktor.pracht@open-xchange.com
 
  - Implemented story 44078307: User can use unified mail
